--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "bugs": {
     "url": "https://github.com/jubairhaider/netflix-clone/issues"
   },
-  "homepage": "https://jubairhaider.github.io/netflix-clone",
+  "homepage": "https://netflix.github.io/netflix-clone",
   "dependencies": {
     "gh-pages": "^3.1.0"
   }
